Fixed: Notices & Warning overlap issue with astra title from astra page.

--- a/inc/assets/css/astra-admin-menu-settings.css
+++ b/inc/assets/css/astra-admin-menu-settings.css
@@ -40,9 +40,23 @@
 
 /* Plugin title */
 
+.appearance_page_astra .notice {
+    margin-left: 0;
+    margin-top: 1em;
+}
+
 #ast-menu-page .ast-title {
-	float: left;
-	padding: 0.2em 0;
+	display: inline-block;
+	font-size: 23px;
+	font-weight: 400;
+	margin: 0;
+	padding: 9px 0 4px 0;
+	line-height: 29px;
+}
+
+#ast-menu-page .nav-tab {
+	float: none;
+	display: inline-block;
 }
 
 #ast-menu-page .ast-separator {
